working on errors while login

--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "db": "host=127.0.0.1;port=5432;database=plantio;user id=postgres;password=root"
+  "db": "host=127.0.0.1;port=5432;database=plantio;user id=postgres;password=root",
+  "jwt_secret": "blablapruebasblabla"
 }
