--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/index.js",
     "test": "jest test",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "make:migration": "knex migrate:make --client ./src/db.js"
   },
   "author": "deltegui",
   "license": "ISC",
@@ -17,11 +18,14 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
     "mysql": "^2.18.1",
-    "simplejsonvalidator": "^1.5.1"
+    "simplejsonvalidator": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-google": "^0.14.0",
-    "jest": "^26.4.2"
+    "eslint-plugin-jest": "^24.0.2",
+    "jest": "^26.4.2",
+    "supertest": "^5.0.0",
+    "sqlite3": "^5.0.0"
   }
 }
