--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "test": "jest test",
+    "coverage": "jest test --coverage=true",
     "lint": "eslint .",
     "make:migration": "knex migrate:make --client ./src/db.js"
   },
