added cors to netcore

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "db": {
-    "connection": "server=127.0.0.1;database=plantio;user=root;password=root",
+    "connection": "server=127.0.0.1;database=plantio;user=root;password=root"
   },
   "jwt_secret": ""
   }
