--- a/server/plantio.csproj
+++ b/server/plantio.csproj
@@ -19,5 +19,9 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../plantio.domain/plantio.domain.csproj"/>
+  </ItemGroup>
+
 
 </Project>
