--- a/plantio/src/main/resources/application.properties
+++ b/plantio/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=3000
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/plantio
-spring.datasource.username=${PLANTIO_DB_USER:root}
-spring.datasource.password=${PLANTIO_DB_PASS:root}
-jwttoken.privateKey=${PLANTIO_PRIVATEKEY:blablamytokenblabla}
-openweather=${PLANTIO_WEATHER_API:4be19030b493c959dc1114b02b7a37cc}
+spring.datasource.url=jdbc:mysql://${dbconn:127.0.0.1:3306}/plantio
+spring.datasource.username=${dbuser:root}
+spring.datasource.password=${dbpass:root}
+jwttoken.privateKey=${jwtkey}
+openweather=${weatherkey}
