refactor store in client

--- a/plantio/src/main/resources/application.properties
+++ b/plantio/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=3000
 spring.datasource.url=jdbc:mysql://${dbconn:127.0.0.1:3306}/plantio
 spring.datasource.username=${dbuser:root}
 spring.datasource.password=${dbpass:root}
-jwttoken.privateKey=${jwtkey}
-openweather=${weatherkey}
+jwttoken.privateKey=${jwtkey:blabla_not_valid_key_blabla}
+openweather=${weatherkey:this_is_not_my_wather_key}
