--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "depgraph": "dependency-cruise -x \"^node_modules\" -T dot src | dot -T svg > dependencygraph.svg"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -20,6 +21,7 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "dependency-cruiser": "^9.21.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
